--- a/migrations/alembic.ini
+++ b/migrations/alembic.ini
@@ -1,17 +1,21 @@
 # A generic, single database configuration.
 
 [alembic]
-# template used to generate migration files
-# file_template = %%(rev)s_%%(slug)s
+# Path to migration scripts
+script_location = migrations
 
-# set to 'true' to run the environment during
-# the 'revision' command, regardless of autogenerate
-# revision_environment = false
+# Database connection URL
+sqlalchemy.url = sqlite:///debate_forum.db
 
+# Template used to generate migration files
+file_template = %%(rev)s_%%(slug)s
+
+# Set to 'true' to run the environment during the 'revision' command
+revision_environment = false
 
 # Logging configuration
 [loggers]
-keys = root,sqlalchemy,alembic,flask_migrate
+keys = root, sqlalchemy, alembic
 
 [handlers]
 keys = console
@@ -33,11 +37,6 @@ qualname = sqlalchemy.engine
 level = INFO
 handlers =
 qualname = alembic
-
-[logger_flask_migrate]
-level = INFO
-handlers =
-qualname = flask_migrate
 
 [handler_console]
 class = StreamHandler
